test/classes/errors/nilability-init-var/init-var-oknil-shared-from-nonnil-owned.bad
init-var-oknil-shared-from-nonnil-owned.chpl:9: error: cannot assign expression of type borrowed MyClass to field 'chpl_t' of type borrowed MyClass?
